--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,21 @@
-# Ignore bundler config
-/.bundle
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# Ignore the build directory
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
 /build
 
-# Ignore Sass' cache
-/.sass-cache
-
-# Ignore .DS_store file
+# misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Ignore NPM debug
-.npm-debug.log
-
-# Ignore Bower Folder
-/bower_components
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
